<resources>
    <string name="app_name">Victoria Driver</string>
    <string name="hello">Hello</string>
    <string name="home">Home</string>
    <string name="splash">Splash</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="label_sign_in">Sign In</string>
    <string name="label_your_phone_number">Your \nphone number?</string>
    <string name="hint_country_code">Country Code</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="sign_in_small">Sign in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="default_notification_channel_id">com.victoria.driver</string>
    <string name="android_key">AIzaSyA1iwjDKU3dw7G6fbCbBLek1396iPDeUjA</string>
    <string name="server_key">AIzaSyCKq0oDBC9tqdLFayj4cGdfcSMfdFXpQpM</string>
    <string name="browser_key">AIzaSyAwuhlqGkRDSED5JATnm_r1vyy-eINnMuU</string>
    <string name="splash_title">S A U D I A R A B I A</string>
    <string name="label_don_t_have_an_account">Don’t have an account?</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="label_forgot_password">Forgot Password?</string>
    <string name="label_small_forgot_password">Forgot password?</string>
    <string name="label_don_t_worry_we_are_here_to_help">Don\'t worry, \nWe are here to help!</string>
    <string name="label_entert_your_registered_email_address_and_we_will_send_you_password_reset_link">Enter your registered email address and we will send you password reset link.</string>
    <string name="hint_email_address">Email</string>
    <string name="btn_reset">Reset</string>
    <string name="label_verify_your_phone_number">Verify \nyour phone number</string>
    <string name="label_otp_has_been_sent_to_00_123_123_1234">OTP has been sent to</string>
    <string name="_0">0</string>
    <string name="label_resend">Didn\'t get OTP? </string>
    <string name="label_your_good_name">Your \ngood name?</string>
    <string name="label_your_personal_info">Your \npersonal info</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="label_create_your_account">Create \nyour account</string>
    <string name="label_add_vehicle_info">Add \nvehicle info</string>
    <string name="label_add_bank_info">Bank \naccount info</string>
    <string name="label_i_m_agree_with_terms_conditions_or_privacy_policy">I\'m agree with <font color="pink">Terms &amp; Conditions</font> or <font color="pink">Privacy Policy</font></string>
    <string name="label_car_type">Car Type</string>
    <string name="label_estimated_km">Estimated Km</string>
    <string name="label_estimated_duration">Estimated Duration</string>
    <string name="label_set_payment_method">Set payment method</string>
    <string name="label_apply">Apply</string>
    <string name="button_ride_later">Ride Later</string>
    <string name="button_ride_now">Ride Now</string>
    <string name="btn_submit_your_request">Submit Your Request</string>
    <string name="toolbar_title_driver_coming">Driver Coming</string>
    <string name="label_cancel_ride">Cancel Ride</string>
    <string name="label_ride_receipt">RIDE RECEIPT</string>
    <string name="btn_confirm">Confirm</string>
    <string name="label_who_will_ride">Who will ride?</string>
    <string name="label_total_est_cost">Total Est. Cost</string>
    <string name="label_do_you_have_a_promocode">Do you have a promocode?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy__3057_cost_avenue_greenbelt_md_20770">3057 Cost Avenue Greenbelt,MD 20770</string>
    <string name="dummy_sedan">Sedan</string>
    <string name="dummysar_10_15">EGP 10-15</string>
    <string name="dummy_victoria_royal_sedan">Victoria Royal - Sedan</string>
    <string name="dummy_10_km">10 km</string>
    <string name="dummy_sar_20_30">EGP 20 - 30</string>
    <string name="dummy_20_min">20 min</string>
    <string name="dummy_cash">Cash</string>
    <string name="dummy_me">Me</string>
    <string name="dummy_james_martin">James Martin</string>
    <string name="dummy_order_id_1234567890">Order ID : </string>
    <string name="dummy_hello_julia">Hello, </string>
    <string name="label_receipt_thank_you_for_ride_with_us">Thank you for ride with us.</string>
    <string name="label_receipt_driver_info">DRIVER INFO</string>
    <string name="label_receipt_driver_name">Driver Name</string>
    <string name="label_receipt_car">Car</string>
    <string name="label_receipt_fare_info">FARE INFO</string>
    <string name="label_receipt_date">Date</string>
    <string name="dummy_receipt__5_july_2018">5 July, 2018</string>
    <string name="label_receipt_time">Time</string>
    <string name="dummy_receipt__3_00_pm">3:00 pm</string>
    <string name="dummy_receipt_15_km">15 km</string>
    <string name="label_receipt_duration">Duration</string>
    <string name="dummy_receipt_20_min">20 min</string>
    <string name="label_receipt_sub_total">Sub Total</string>
    <string name="lable_receipt_distance">Distance</string>
    <string name="dummy_sar_30">EGP 30</string>
    <string name="label_receipt_promocode">Promocode</string>
    <string name="dummy_sar_10">-EGP 10</string>
    <string name="label_reciept_wallet">Wallet</string>
    <string name="dummy_sar_20">EGP 20</string>
    <string name="label_total_cost">Total Cost</string>
    <string name="label_review_how_was_your_experience">How was your \nexperience?</string>
    <string name="dummy_sar_1000">EGP 1000</string>
    <string name="label_wallet_balance">Wallet Balance</string>
    <string name="label_add_amount">Add Amount</string>
    <string name="label_transaction_history">Transaction \nHistory</string>
    <string name="label_enter_amount">Enter Amount</string>
    <string name="dummy_sar_50">EGP 50</string>
    <string name="label_select_card">Select Card</string>
    <string name="dummy_xxxx_xxxx_xxxx_1234">xxxx xxxx xxxx 1234</string>
    <string name="dummy_11_22">11/22</string>
    <string name="label_start_date">Start Date</string>
    <string name="label_end_date">End Date</string>
    <string name="label_let_s_ride">Let\'s ride</string>
    <string name="dummy_sar_500">+ EGP 500</string>
    <string name="dummy_25_mar_2018">25 Mar, 2018</string>
    <string name="label_add_amount_in_wallet">Add amount in wallet</string>
    <string name="dummy_transaction_id_1234567890">Transaction ID : #1234567890</string>
    <string name="dummy_trip_id_1234567890">Trip ID : </string>
    <string name="dummy_3_00_pm">3:00 pm</string>
    <string name="dummy_5_july_2018_3_00_pm">5 July, 2018 - 3:00 pm</string>
    <string name="status_pending">Pending</string>
    <string name="label_ride_info">Ride Info</string>
    <string name="dummy_est_20_min">Est. 20 min</string>
    <string name="dummy_est_6_km">Est. 6 km</string>
    <string name="label_cancel">Cancel</string>
    <string name="dummy_stive_make">Stive Make</string>
    <string name="dummy__00_123_123_1234">+00 123 123 1234</string>
    <string name="label_name">Name</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing">Lorem Ipsum is simply dummy text of the printing...</string>
    <string name="label_call">Call</string>
    <string name="label_chat">Chat</string>
    <string name="label_change_password">Change password</string>
    <string name="hint_old_password">Old Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="btn_set_password">Set Password</string>
    <string name="label_upcoming_rides">Upcoming Rides</string>
    <string name="label_past_rides">Past Rides</string>
    <string name="cancel_reason_waited_too_long">Waited too long</string>
    <string name="dummy_julia_robert">Julia Robert</string>
    <string name="label_caps_change_password">Change Password</string>
    <string name="label_payment_details">Payment Details</string>
    <string name="label_about_us">About Us</string>
    <string name="label_contact_us">Contact Us</string>
    <string name="label_terms_privacy_policy"><![CDATA[Terms & Privacy Policy]]></string>
    <string name="label_faq_s">FAQ\'s</string>
    <string name="btn_send">Send</string>
    <string name="label_upload_images">Upload Images</string>
    <string name="label_subject">Subject</string>
    <string name="label_card_holder_name">Card Holder Name</string>
    <string name="btn_add">Add</string>
    <string name="menu_home">Home</string>
    <string name="menu_wallet">Wallet</string>
    <string name="menu_my_rides">My Rides</string>
    <string name="menu_notification">Notification</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="label_enter_4_digit_code">Enter 4 - Digit Code</string>
    <string name="hint_create_password">Create Password</string>
    <string name="hint_referral_code">Referral Code</string>
    <string name="dummy_victoria123456">VICTORIA123456</string>
    <string name="label_share_your_referral_code">Share your referral code</string>
    <string name="lhint_search_country">Search country</string>
    <string name="toolbar_titke_select_country_code">Select Country Code</string>
    <string name="label_select_time">Select Time</string>
    <string name="validation_valid_email">Please enter valid email</string>
    <string name="validation_email">Please enter email</string>
    <string name="validation_empty_password">Please enter password</string>
    <string name="validation_empty_new_password">Please enter new password</string>
    <string name="validation_empty_old_password">Please enter old password</string>
    <string name="validation_valide_password">Please enter minimum 4 characters password</string>
    <string name="validation_valid_new_password">Please enter minimum 4 characters new password</string>
    <string name="validation_empty_first_name">Please enter first name</string>
    <string name="validation_empty_car_make">Please enter car make</string>
    <string name="validation_empty_car_model">Please enter car model</string>
    <string name="validation_empty_car_color">Please enter car color</string>
    <string name="validation_empty_plat_no">Please enter vehicle plate number</string>
    <string name="validation_empty_bank_name">Please enter bank name</string>
    <string name="validation_empty_account_number">Please enter account number</string>
    <string name="validation_empty_routing_number">Please enter routing number</string>
    <string name="validation_empty_account_holder_number">Please enter account holder name</string>
    <string name="validation_valid_first_name">Please enter valid first name</string>
    <string name="validation_empty_last_name">Please enter last name</string>
    <string name="validation_empty_national_id">Please enter national id</string>
    <string name="validation_valid_last_name">Please enter valid last name</string>
    <string name="validation_country_code">Please select country code</string>
    <string name="validation_empty_phone">Please enter phone number</string>
    <string name="validation_valid_phone_number">Please enter valid phone number</string>
    <string name="dp_code">Code</string>
    <string name="dummy_91">+91</string>
    <string name="date_5_july_2018_3_00_pm">5 July, 2018 - 3:00 pm</string>
    <string name="title_sign_in">Sign in</string>
    <string name="label_sign_up">Sign Up</string>
    <string name="earnings">Earnings</string>
    <string name="ride_history">Ride History</string>
    <string name="transaction_history">Transaction History</string>
    <string name="version_1_0">Version 1.0</string>
</resources>