<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayoutRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:orientation="vertical"
    android:translationY="-1080dp">

    <View
        android:id="@+id/viewBackGround"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_110"
        android:layout_marginBottom="@dimen/dp_120"
        android:background="@drawable/slide_menu_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/view2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/imageViewClose"
        android:layout_width="@dimen/dp_30"
        android:layout_height="@dimen/dp_30"
        android:padding="@dimen/dp_6"
        android:tint="@color/white"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/close_btn" />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/imageViewProfile"
        android:layout_width="@dimen/dp_65"
        android:layout_height="@dimen/dp_65"
        android:layout_marginStart="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_8"
        app:layout_constraintBottom_toBottomOf="@+id/textViewUserName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewUserName" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/textViewUserName"
        style="@style/textview_title_bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_marginEnd="@dimen/dp_8"
        android:ellipsize="end"
        android:maxLines="2"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toStartOf="@+id/view2"
        app:layout_constraintStart_toEndOf="@+id/imageViewProfile"
        app:layout_constraintTop_toTopOf="parent" />


    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/textViewHome"
        style="@style/Drawer.TextView"
        android:layout_width="@dimen/dp_230"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:padding="@dimen/dp_6"
        android:text="@string/menu_home"
        app:layout_constraintStart_toStartOf="@+id/imageViewProfile"
        app:layout_constraintTop_toBottomOf="@+id/imageViewProfile" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/textViewEarnings"
        style="@style/Drawer.TextView"
        android:layout_width="@dimen/dp_230"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:padding="@dimen/dp_6"
        android:text="@string/earnings"
        app:layout_constraintStart_toStartOf="@+id/textViewHome"
        app:layout_constraintTop_toBottomOf="@+id/textViewHome" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/textViewRideHistory"
        style="@style/Drawer.TextView"
        android:layout_width="@dimen/dp_230"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:padding="@dimen/dp_6"
        android:text="@string/ride_history"
        app:layout_constraintStart_toStartOf="@+id/textViewEarnings"
        app:layout_constraintTop_toBottomOf="@+id/textViewEarnings" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/textViewNotification"
        style="@style/Drawer.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:padding="@dimen/dp_6"
        android:text="@string/menu_notification"
        app:layout_constraintStart_toStartOf="@+id/textViewRideHistory"
        app:layout_constraintTop_toBottomOf="@+id/textViewRideHistory" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/textViewNotificationCount"
        style="@style/textview_title_medium_blue_size_14"
        android:layout_width="@dimen/dp_20"
        android:layout_height="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_8"
        android:background="@drawable/drawable_round_pink"
        android:gravity="center"
        android:padding="@dimen/dp_2"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_10"
        app:layout_constraintBottom_toBottomOf="@+id/textViewNotification"
        app:layout_constraintStart_toEndOf="@+id/textViewNotification"
        app:layout_constraintTop_toTopOf="@+id/textViewNotification" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/textViewTransactionHistory"
        style="@style/Drawer.TextView"
        android:layout_width="@dimen/dp_230"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:padding="@dimen/dp_6"
        android:text="@string/transaction_history"
        app:layout_constraintStart_toStartOf="@+id/textViewNotification"
        app:layout_constraintTop_toBottomOf="@+id/textViewNotification" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/textViewSettings"
        style="@style/Drawer.TextView"
        android:layout_width="@dimen/dp_230"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp_10"
        android:padding="@dimen/dp_6"
        android:text="@string/menu_settings"
        app:layout_constraintStart_toStartOf="@+id/textViewTransactionHistory"
        app:layout_constraintTop_toBottomOf="@+id/textViewTransactionHistory" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/textViewLogout"
        style="@style/Drawer.TextView"
        android:layout_width="@dimen/dp_230"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:padding="@dimen/dp_6"
        android:text="@string/menu_logout"
        app:layout_constraintStart_toStartOf="@+id/textViewSettings"
        app:layout_constraintTop_toBottomOf="@+id/textViewSettings" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/textViewVersion"
        style="@style/Drawer.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:padding="@dimen/dp_6"
        android:text="@string/version_1_0"
        android:textColor="@color/text_pink"
        app:layout_constraintStart_toStartOf="@+id/textViewSettings"
        app:layout_constraintTop_toBottomOf="@+id/textViewLogout" />


    <View
        android:id="@+id/viewBackGroundOnline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/slide_menu_small"
        android:visibility="gone" />
</android.support.constraint.ConstraintLayout>
