<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true">


    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/textViewSignin"
        style="@style/textview_title_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_24"
        android:text="@string/title_sign_in"
        android:textSize="@dimen/sp_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/appCompatTextView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_8"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/label_don_t_have_an_account"
        android:textColor="@color/text_blue"
        android:textSize="@dimen/sp_13"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSignin" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/textViewSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_4"
        android:layout_marginTop="@dimen/dp_8"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/label_sign_up"
        android:textColor="@color/text_pink"
        android:textSize="@dimen/sp_12"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/appCompatTextView4"
        app:layout_constraintTop_toBottomOf="@+id/textViewSignin" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_32"
        android:textAlignment="viewStart"
        android:textColorHint="@color/text_blue"
        app:hintTextAppearance="@style/GreenTextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/appCompatTextView4"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView4">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/editTextEmail"
            style="@style/AppTheme.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/mail"
            android:ellipsize="end"
            android:focusedByDefault="false"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:text=""
            android:textAlignment="viewStart"
            android:textColorHint="@color/text_blue"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:textAlignment="viewStart"
        android:textColorHint="@color/text_blue"
        app:hintTextAppearance="@style/hint_text"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayoutEmail"
        app:layout_constraintStart_toStartOf="@+id/textInputLayoutEmail"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/editTextPasword"
            style="@style/AppTheme.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/lock"
            android:ellipsize="end"
            android:focusedByDefault="false"
            android:hint="@string/hint_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:text=""
            android:textAlignment="viewStart"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold" />

    </android.support.design.widget.TextInputLayout>


    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/imageViewBackground"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_230"
        android:layout_marginBottom="@dimen/dp_24"
        android:background="@drawable/splashbg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />


    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/textViewForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_32"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/label_forgot_password"
        android:textColor="@color/text_light_grey"
        android:textSize="@dimen/sp_13"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewNext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewNext" />


    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/imageViewNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintBottom_toTopOf="@+id/imageViewBackground"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayoutPassword"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword"
        app:layout_constraintVertical_bias="0.35"
        app:srcCompat="@drawable/btn_next" />
</android.support.constraint.ConstraintLayout>